# filmweb-api

./: .gitignore  .travis.yml  LICENSE.md  README.md  pyproject.toml  requirements.txt  setup.py
example/: example.py
filmweb_api/: __init__.py  config.py  filmweb_api.py
src/: __init__.py  exceptions.py  filmweb_api.py
tests/: filmweb_api_test.py
