[tool.poetry]
name = "filmweb-api"
version = "0.1.0"
description = ""
authors = ["Cyprian Nosek <cypiszzz@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.*"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]
pytest = "^5.1.2"
pytest-mock = "^1.10.4"
requests-mock = "^1.7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
